--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,17 +4,36 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  flutter_icons: ^1.0.0+1
+  loading_gifs: 0.3.0
+  charts_flutter: ^0.11.0
+  fl_chart: ^0.40.2
+  crisp: ^0.2.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
 flutter:
   uses-material-design: true
+  assets:
+   - assets/splash/splash.png
+   - assets/splash/myavatar2.heic
+
+
+  fonts:
+    - family: Pacifico
+      fonts:
+        - asset: assets/fonts/Pacifico-Regular.ttf
+    - family: Source Sans Pro
+      fonts:
+        - asset: assets/fonts/SourceSansPro-Regular.ttf
